Save readme
Signed-off-by: bharathappali <abharath@redhat.com>